Project

General

Profile

Actions

Bug #50832

closed

[pwl ssd] first_free_entry corruption on media (segfault in bufferlist::splice() during fio workload)

Added by Ilya Dryomov about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #51670: pacific: [pwl ssd] first_free_entry corruption on media (segfault in bufferlist::splice() during fio workload)ResolvedDeepika UpadhyayActions
Actions #1

Updated by Ilya Dryomov about 3 years ago

  • Status changed from New to In Progress
Actions #2

Updated by Ilya Dryomov about 3 years ago

(gdb) bt
#0  0x00007f44a9c8f63d in ceph::buffer::v15_2_0::list::append(ceph::buffer::v15_2_0::ptr const&, unsigned int, unsigned int) () from /lib64/librados.so.2
#1  0x00007f44a9c909ee in ceph::buffer::v15_2_0::list::splice(unsigned int, unsigned int, ceph::buffer::v15_2_0::list*) () from /lib64/librados.so.2
#2  0x00007f447d1718db in librbd::cache::pwl::ssd::WriteLog<librbd::ImageCtx>::write_log_entries(std::vector<std::shared_ptr<librbd::cache::pwl::GenericLogEntry>, std::allocator<std::shared_ptr<librbd::cache::pwl::GenericLogEntry> > >, librbd::cache::pwl::ssd::WriteLog<librbd::ImageCtx>::AioTransContext*) ()
   from /usr/lib64/ceph/librbd/libceph_librbd_pwl_cache.so
#3  0x00007f447d17275a in librbd::cache::pwl::ssd::WriteLog<librbd::ImageCtx>::append_ops(std::__cxx11::list<std::shared_ptr<librbd::cache::pwl::GenericLogOperation>, std::allocator<std::shared_ptr<librbd::cache::pwl::GenericLogOperation> > >&, Context*, unsigned long*, unsigned long&) () from /usr/lib64/ceph/librbd/libceph_librbd_pwl_cache.so
#4  0x00007f447d172ce2 in librbd::cache::pwl::ssd::WriteLog<librbd::ImageCtx>::append_op_log_entries(std::__cxx11::list<std::shared_ptr<librbd::cache::pwl::GenericLogOperation>, std::allocator<std::shared_ptr<librbd::cache::pwl::GenericLogOperation> > >&) () from /usr/lib64/ceph/librbd/libceph_librbd_pwl_cache.so
#5  0x00007f447d172fac in librbd::cache::pwl::ssd::WriteLog<librbd::ImageCtx>::append_scheduled_ops() () from /usr/lib64/ceph/librbd/libceph_librbd_pwl_cache.so
#6  0x00007f447d1109a8 in ThreadPool::PointerWQ<Context>::_void_process(void*, ThreadPool::TPHandle&) () from /usr/lib64/ceph/librbd/libceph_librbd_pwl_cache.so
#7  0x00007f44a790de34 in ThreadPool::worker(ThreadPool::WorkThread*) () from /usr/lib64/ceph/libceph-common.so.2
#8  0x00007f44a7910895 in ThreadPool::WorkThread::entry() () from /usr/lib64/ceph/libceph-common.so.2
#9  0x00007f44a78eed1d in Thread::_entry_func(void*) () from /usr/lib64/ceph/libceph-common.so.2
#10 0x00007f44a923414a in ?? () from /lib64/libpthread.so.0
#11 0x0000000000000000 in ?? ()
Actions #3

Updated by Ilya Dryomov almost 3 years ago

  • Subject changed from [pwl ssd] segfault in bufferlist::splice() during fio workload to [pwl ssd] first_free_entry corruption on media (segfault in bufferlist::splice() during fio workload)
Actions #4

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 41490
Actions #5

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to pacific
Actions #6

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51670: pacific: [pwl ssd] first_free_entry corruption on media (segfault in bufferlist::splice() during fio workload) added
Actions #7

Updated by Deepika Upadhyay over 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF